tests/postgres/ui-common/top_sql_param_only_in_section_map.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/postgres/tmp-ui/top_sql_param_only_in_section_map.rs:12:20
   |
12 |                 ( :id = 1i64 ),
   |                    ^^
